Removed standalone activity, updated docs, made user be registered to mandatory activities when registering to event
